# rro-track-editor

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: slot10.sav
assets/models/: groundwork.blend  groundwork.mtl  rro_height_map.mtl  stonewall.blend  stonewall.mtl  switch.blend  switch.mtl  track.blend  trackbed.blend  tube.blend  tube.mtl
src/: background.rs  button.rs  control.rs  curve.rs  gvas.rs  main.rs  palette.rs  placed.rs  snaps.rs  spline_mesh.rs  update.rs
src/bevy_obj/: loader.rs  mod.rs
src/old/: button.rs  curve.rs  main.old.rs  menu.rs
src/spline/: bezier.rs  bspline.rs  mesh.rs  mod.rs
