[package]
name = "rro-track-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6" }
bevy_mod_picking = "*"
bevy_mod_raycast = "*"
#bevy_transform_gizmo = { path = "../bevy_transform_gizmo" }
smooth-bevy-cameras = "*"
bevy_egui = "0.11"
bspline = "1.1.0"
encoding_rs = "*"
#nfd2 = "*"
image = "*"
enum-utils = "0.1.2"

anyhow = "1.0"
thiserror = "1.0"
obj-rs = { version = "0.7", default-features = false }

enum-map = "2.0.3"

[patch.crates-io]
bevy = { git = 'https://github.com/bevyengine/bevy', branch = "main" }